whoops forgot to commit for a while

--- a/glossary.tex
+++ b/glossary.tex
@@ -63,3 +63,9 @@
     plural = features,
     description = {},
 }
+
+\newglossaryentry{batch}{
+    name = batch,
+    plural = batches,
+    description = {},
+}
